--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack --config ./webpack.config.js",
-    "start": "npm run build && electron ./dist/main.js"
+    "dev": "electron-webpack dev",
+    "compile": "electron-webpack"
   },
   "keywords": [],
   "author": "",
@@ -12,19 +12,21 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "css-loader": "^5.0.1",
     "electron": "^11.0.2",
-    "eslint": "^7.14.0",
-    "html-webpack-plugin": "^4.5.0",
+    "electron-webpack": "^2.8.2",
+    "electron-webpack-ts": "^4.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.11",
-    "typescript": "^4.1.2",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0"
+    "typescript": "3.8.3",
+    "webpack": "~4.42.1"
   },
   "dependencies": {
-    "react-jss": "^10.5.0"
+    "react-jss": "^10.5.0",
+    "source-map-support": "^0.5.19"
+  },
+  "electronWebpack": {
+    "renderer": {
+      "webpackConfig": "webpack.renderer.additions.js"
+    }
   }
 }
