--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
+  "extends": "./node_modules/electron-webpack/tsconfig-base.json",
   "compilerOptions": {
     "jsx": "react",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/main/*", "src/renderer/*"],
+      "common/*": ["src/common/*"]
+    }
   },
 }
