--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack": "~4.42.1"
   },
   "dependencies": {
+    "react-icons": "^3.11.0",
     "react-jss": "^10.5.0",
     "source-map-support": "^0.5.19"
   },
